# pytorch-object-tracking

./: LICENSE  Pipfile  README.md  pyproject.toml  simple-track.py
.devcontainer/: Dockerfile  devcontainer.json
